# ocr-converter

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/ocr_converter/: cli.py
tests/: test_paths.py
